# yourcontrolstester

./: package-lock.json  package.json  pnpm-lock.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  gaugecommunicator.rs  main.rs  ui.rs
src/components/: MainContainer.tsx  Navbar.tsx
src/components/Definitions/: DefinitionBrowse.tsx  DefinitionCard.tsx  DefinitionList.tsx  DefinitionSearch.tsx  DefinitionsHandler.tsx  YamlParser.ts
src/components/Form/: FormField.tsx  GenericVarForm.tsx  SetForm.tsx  WatchForm.tsx
src/components/Watcher/: WatcherCard.tsx  WatcherHandler.tsx
src/css/: Definitions.css  FormField.css  MainContainer.css  Navbar.css  Shared.css  Watcher.css
