[package]
name = "yourcontrolstester"
version = "0.1.0"
description = "Definitions tester for creating definition files for YourControls."
authors = [ "Sequal32" ]
license = "GPL-3.0"
repository = ""
default-run = "yourcontrolstester"
edition = "2018"
build = "src/build.rs"

[dependencies]
bimap = "0.6"
byteorder = "1.4"
crossbeam-channel = "0.5"
simconnect = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "yourcontrolstester"
path = "src/main.rs"
